--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> t
   <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
   <script src='image.js'></script>
-  <script src="Histogram.js"></script>
+  <script src="histogram.js"></script>
   <script src="color.js"></script>
   <script src="util.js"></script>
   <script src="updatePalette.js"></script>
