--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> t
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
   <script src='image.js'></script>
   <script src="histogram.js"></script>
