updating for atom package

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <meta name="google" content="notranslate">
+  <meta http-equiv="Content-Language" content="en">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
   <script src='image.js'></script>
@@ -75,6 +78,9 @@
                         <ul class="dropdown-menu" id="previous-colors-dropdown">
 
                         </ul>
+                  </li>
+                  <li>
+                      <a id="package-link" href="https://atom.io/themes/pale-syntax"><i class="fa fa-archive" aria-hidden="true"></i> [atom syntax package]</a>
                   </li>
                  </ul>
                  <div >
