adding github link

--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,9 @@
                   <li>
                       <a id="package-link" href="https://atom.io/themes/pale-syntax"><i class="fa fa-archive" aria-hidden="true"></i> [atom syntax package]</a>
                   </li>
+                  <li>
+                      <a id="github-link" href="https://github.com/nadr0/pale"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+                  </li>
                  </ul>
                  <div >
               </div><!-- /.navbar-collapse -->
